# data-science-2

./: .gitignore  README.md  TODOs.md  old_pyproject  pyproject.toml  trees_and_forest.ipynb
Homework/: DS_2_2022_HW1_solution.ipynb  DS_2_2022_HW2_efficient_net.py  DS_2_2022_HW2_template.ipynb  DS_2_2023_HW2_template.ipynb
Lectures/Additional/: README.md
Practicals/00_python_intro/: python_intro.ipynb
Practicals/01/: Practical_01.docx
Practicals/01_git/: Practical_01.docx  Practical_01.md  testing.txt
Practicals/01_ml_basics/: ML_basics.ipynb
Practicals/02/: python_intro.ipynb
Practicals/02_decision_trees/: trees_and_forest.ipynb
Practicals/02_python_intro/: my_library.json  python_intro.ipynb  test.txt  test_csv.csv  test_pickle.pickle
Practicals/03/: ML_basics.ipynb  woe_functions.py
Practicals/03_hyperparameter_optimization/: hyperparameters_optimization.ipynb
Practicals/03_ml_basics/: ML_basics.ipynb  Untitled.ipynb
Practicals/04_decision_trees/: CHAID-5.3.0-py3-none-any.whl  trees_and_forest.ipynb  trees_and_forest_working_copy.ipynb  xgboost.ipynb
Practicals/04_neural_networks/: NN_convolutions.ipynb  NN_finetuning.ipynb  NN_introduction.ipynb  NN_mnist.ipynb  NN_transformers.ipynb
Practicals/05_additional_materials/: NN_backpropagation.ipynb  clustering_working_copy.ipynb
Practicals/05_neural_networks/: 3D_convolution.ipynb  3D_script.py  CNN_intro.ipynb  NN_backpropagation.ipynb  NN_convolutions.ipynb  NN_finetuning.ipynb  NN_introduction.ipynb  NN_mnist.ipynb  NN_tensorflow_intro.ipynb  NN_transformers.ipynb  RNN_intro.ipynb  (+1 more)
(+18 files in other folders)
