[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = ["Ondrej Tybl <ondra@tybl.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.9"
numpy = "^1.26.3"
pandas = "^2.2.0"
jupyterlab = "^4.0.11"
tqdm = "^4.66.1"
pathlib = "^1.0.1"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
datetime = "^5.4"
chaid = "^5.4.1"
xgboost = "^2.0.3"
pydot = "^1.4.2"
graphviz = "^0.16.0"
mtcnn = "^0.1.1"
pillow = "^10.2.0"
tensorflow-datasets = "4.8.3"
scipy = "^1.12.0"
hyperopt = "^0.2.7"
keras-tuner = "^1.4.6"
tensorflow-io-gcs-filesystem = "0.31.0"
ipywidgets = "^8.1.1"
tensorflow = "2.8.3"
pyarrow = "^15.0.0"
shap = "^0.44.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
