[tool.poetry]
name = "data-science-2"
version = "0.1.0"
description = ""
authors = ["Ondrej Tybl <ondra@tybl.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
scikit-learn = "1.4.0"
pandas = "2.2.3"
jupyter = "1.1.1"
termcolor = "*"
tqdm = "4.67.1"
matplotlib = "3.8.2"
seaborn = "0.13.1"
chaid = "5.4.1"
xgboost = "2.0.3"
graphviz = "0.16"
shap = "0.44.1"
torch = "2.5.1"
torchvision = "0.20.1"
torchaudio = "2.5.1"
datasets = "3.2.0"
transformers = "4.48.2"
huggingface-hub = "0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
